--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,10 @@ services:
     environment:
       - TZ=Asia/Shanghai
     volumes:
-      # 配置文件目录
+      # 配置文件目录（需要先创建 data/.voiceprint.yaml）
       - ./data:/app/data
+    # 如果需要访问宿主机的 MySQL，取消下面的注释
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
 networks:
   default:
