--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ torch==2.2.2
 sentencepiece==0.2.0
 soundfile==0.13.1
 torchaudio==2.2.2
+pyarrow>=8.0.0,<14.0.0
 pyyaml==6.0.1
 fastapi==0.110.2
 uvicorn==0.29.0
